fix: display layout bug

--- a/src/pages/Home/Home.scss
+++ b/src/pages/Home/Home.scss
@@ -101,8 +101,8 @@
       flex-wrap: wrap;
       position: relative;
       padding: 2rem 0;
-      overflow-x: hidden;
-      overflow-y: hidden;
+      // overflow-x: hidden;
+      // overflow-y: hidden;
 
       .platform-card {
         border: 0.08rem solid #fff;
@@ -207,5 +207,12 @@
   to {
     opacity: 1;
     transform: translateY(0);
+  }
+}
+
+@media (min-width: 769px) {
+  .home-container .platforms-section .platforms-container  {
+    overflow-x: hidden;
+    overflow-y: hidden;
   }
 }
